--- a/frontend/app.json
+++ b/frontend/app.json
@@ -7,7 +7,6 @@
     "icon": "./assets/images/icon.png",
     "scheme": "frontend",
     "userInterfaceStyle": "automatic",
-
     "android": {
       "package": "com.zaid.foodexpiry",
       "versionCode": 1,
@@ -16,15 +15,12 @@
         "background": "#E6F4FE"
       }
     },
-
     "ios": {
       "supportsTablet": true
     },
-
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       [
@@ -34,15 +30,14 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "@react-native-community/datetimepicker"
     ],
-
     "extra": {
       "eas": {
         "projectId": "77a4e489-b270-4c22-9e96-65c11a62190c"
       }
     },
-
     "owner": "zaidshaikhak9"
   }
 }
